Fix deprecation warnings in sqrt function (#1018)